# nqueens

./: .gitignore  Cargo.toml  index.html
.github/workflows/: deploy.yml
src/: main.rs
