[package]
name = "eight_queens_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui = "0.29.1"
csv = "1.3"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"

# Web dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-time = "1.1"
web-sys = { version = "0.3.70", features = ["HtmlCanvasElement", "Window", "Document", "Blob", "Url", "HtmlAnchorElement", "BlobPropertyBag"] }
